--- a/DemoAlzyCare/Assessment.storyboard
+++ b/DemoAlzyCare/Assessment.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vo9-Wu-e5H">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AqU-tn-IST">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -75,13 +75,13 @@
         <!--Sample View Controller-->
         <scene sceneID="L4x-Xe-WyM">
             <objects>
-                <viewController id="k6F-MM-LtX" customClass="SampleViewController" customModule="DemoAlzyCare" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="k6F-MM-LtX" customClass="SampleViewController" customModule="DemoAlzyCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZIX-lO-LU8">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dFN-oC-naJ">
-                                <rect key="frame" x="20" y="413" width="353" height="26.333333333333314"/>
+                                <rect key="frame" x="20" y="408" width="353" height="26.333333333333314"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember the sequence" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fb3-UC-RhR">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="26.333333333333332"/>
@@ -98,7 +98,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Hnf-eg-Mac">
-                                <rect key="frame" x="20" y="325.33333333333337" width="353" height="261.33333333333337"/>
+                                <rect key="frame" x="20" y="320.33333333333337" width="353" height="261.33333333333337"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tGP-Qa-mHl">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="50.333333333333336"/>
@@ -151,10 +151,10 @@
                                 </constraints>
                             </stackView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="8ap-So-fq1">
-                                <rect key="frame" x="20" y="123" width="353" height="4"/>
+                                <rect key="frame" x="20" y="20" width="353" height="4"/>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4jQ-p6-3G7">
-                                <rect key="frame" x="20" y="147" width="353" height="28.666666666666657"/>
+                                <rect key="frame" x="20" y="44" width="353" height="28.666666666666671"/>
                                 <color key="tintColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
@@ -177,7 +177,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CLE-zo-GlZ">
-                                <rect key="frame" x="20" y="408" width="353" height="36"/>
+                                <rect key="frame" x="20" y="403" width="353" height="36"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="dd/mm/yy" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7mj-0E-raK">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="36"/>
@@ -196,7 +196,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="qfn-c5-wtD">
-                                <rect key="frame" x="20" y="218.99999999999997" width="353" height="391.33333333333326"/>
+                                <rect key="frame" x="20" y="242.99999999999997" width="353" height="391.33333333333326"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="egR-PL-FAc">
                                         <rect key="frame" x="111.66666666666666" y="0.0" width="130" height="130"/>
@@ -231,7 +231,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cQQ-F2-VWY">
-                                                <rect key="frame" x="0.0" y="120.66666666666667" width="353" height="50.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="120.66666666666661" width="353" height="50.333333333333329"/>
                                                 <color key="tintColor" red="0.32369780539999998" green="0.1063579395" blue="0.574860394" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Button" buttonSize="large">
@@ -326,7 +326,7 @@
             <objects>
                 <viewController hidesBottomBarWhenPushed="YES" id="AxP-RG-uzE" customClass="ResultViewController" customModule="DemoAlzyCare" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CSO-Ir-Umi">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image 7" translatesAutoresizingMaskIntoConstraints="NO" id="By1-mb-xTD">
@@ -510,31 +510,13 @@
             <point key="canvasLocation" x="5609.9236641221369" y="3.5211267605633805"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Y9a-GA-Kzf">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vo9-Wu-e5H" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="upi-m6-JMp">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="AqU-tn-IST" kind="relationship" relationship="rootViewController" id="f6Y-Dv-ZOh"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nbq-0d-DZx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1993.1297709923663" y="3.5211267605633805"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="L4a-FM-AzL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y9R-4f-iLB" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="pnh-je-y6g"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yni-ym-c38">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
